FIX: sets a width for the badge
This should avoid layout shift after badge load.

--- a/common/common.scss
+++ b/common/common.scss
@@ -4,4 +4,5 @@ aside.onebox .onebox-body img.github-status-indicator {
   margin: 0;
   padding: 0;
   height: 20px;
+  width: 120px;
 }
